# obot

./: .env_example  .gitignore  Makefile  README.md
.github/workflows/: clippy.yml  rust.yml
obot/: Cargo.toml
obot/migrations/: 20221031111109_initial_migration.sql  20221031144116_todo.sql  20221031144126_maps.sql  20221120130706_beatmapsets.sql  20230121164529_qualified_beatmapset.sql  20230122161927_graveyard_beatmapset.sql  20230122161929_qualified_beatmapset.sql  20230122161931_loved_beatmapset.sql  20230122161933_ranked_beatmapset.sql
obot/src/: build.rs  cache.rs  eventhandler.rs  main.rs  owner.rs  scheduler.rs  utility.rs
obot/src/commands/: dbg.rs  game.rs  help.rs  mod.rs
obot/src/db/: handler.rs
obot/src/web/: api.rs  handler.rs
tests/: scrape_test.py
