[package]
name = "obot"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11" }
clokwerk = "0.4.0-rc.1"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "cache",
    "client",
    "collector",
    "default",
    "framework",
    "gateway",
    "http",
    "model",
    "voice",
    "utils",
    "rustls_backend",
    "builder",
    "chrono"
]