[package]
name = "obot"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11" }
clokwerk = "0.4.0-rc.1"
sqlx = { version = "0.6.2", features = ["sqlite", "offline", "runtime-tokio-rustls"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
itertools = "0.10"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "cache",
    "client",
    "collector",
    "default",
    "framework",
    "gateway",
    "http",
    "model",
    "voice",
    "utils",
    "rustls_backend",
    "builder",
    "chrono"
]